--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ permalink:        pretty
 
 # Setup
 title:            The CITE Architecture
+tagline: Technology-independent, machine-actionable citation of scholarly resources
 description:      'Central home page for git repositories for the CITE architecture'
 paginate_path: "/reviews/page:num"
 url:
