Add cite lib to living docs

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,8 @@ paginate:         5
 
 # Links:
 links:
+  - title: Github repositories
+    url: /repos
   - title: Live specifications
     url: /living-docs
      
