--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,8 @@ links:
     url: /repos
   - title: Live specifications
     url: /living-docs
+  - title: About..
+    url: /about
      
      
 
